<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/editAccountCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close_button"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/currentUsernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/current_username"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/editAccountCloseButton" />

    <EditText
        android:id="@+id/editPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/currentUsernameTextView"
        app:layout_constraintStart_toStartOf="@+id/currentUsernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/currentUsernameTextView" />

    <EditText
        android:id="@+id/editPasswordVerifyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/verify_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/currentUsernameTextView"
        app:layout_constraintStart_toStartOf="@+id/currentUsernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordEditText" />

    <EditText
        android:id="@+id/editEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editPasswordVerifyEditText"
        app:layout_constraintStart_toStartOf="@+id/editPasswordVerifyEditText"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordVerifyEditText" />

    <EditText
        android:id="@+id/editPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/editEmailEditText" />

    <Button
        android:id="@+id/editAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save_changes"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>