<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/newUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/newUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/newUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/newUsernameEditText"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/newPasswordVerifyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/newUsernameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText"
        tools:ignore="TextFields" />



    <EditText
        android:id="@+id/newEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordVerifyEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newPasswordVerifyEditText"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordVerifyEditText" />

    <EditText
        android:id="@+id/newPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/newEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/newEmailEditText" />

    <ImageButton
        android:id="@+id/editItemCloseButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/newRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/newPhoneEditText"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/register_new_user"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemCloseButton" />

</androidx.constraintlayout.widget.ConstraintLayout>