<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/inventoryItemName"
        android:layout_width="202dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/inventory_item_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/inventoryItemQuantity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inventoryItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/inventory_item_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/itemQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryItemName" />

    <TextView
        android:id="@+id/inventoryItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/qty"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/item_quantity"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/inventoryItemQuantity" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete_button"
        android:padding="16dp"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>